# Multi-UAV_Tasking_n_Coordination

./: .gitignore  CMakeLists.txt  Dockerfile  Multi-UAV_Tasking_N_Coordination.code-workspace  README.md  container-compose.yml
.devcontainer/: devcontainer.json  docker-compose.yml
MotionPlanner/coppeliaSim/: main.py  test.ttt  vrep.py
MotionPlanner/coppeliaSim/CoppeliaInternalScripts/: QuadCopter_0.lua  QuadCopter_2.lua  ResizableFloor_5_25.lua  original_planner.py  planner.py  track.lua
MotionPlanner/coppeliaSim/Python_ZMQAPI/: planner_external.py
MotionPlanner/coppeliaSim/QuadMILP/: TrajManager.py  model.py
MotionPlanner/coppeliaSim/test/: test_planner.py
MotionPlanner/ros/area_coverage/include/area_coverage/: quad_body_motion.h
MotionPlanner/ros/area_coverage/src/: coverage_view.cpp
MotionPlanner/ros/area_coverage/tasking/: main.cpp
MotionPlanner/ros/area_coverage/tasking/gui/: CMakeLists.txt  mainwindow.cpp
MotionPlanner/ros/area_coverage/tasking/include/: logger.h  problem.h
MotionPlanner/ros/area_coverage/tasking/include/Algorithm/: SeqAreaDecompose.h  TriangleDecomposition.h
MotionPlanner/ros/area_coverage/tasking/src/: solver.cpp
MotionPlanner/ros/area_coverage/tasking/src/Alorithm/: MinimumTime.cpp  RotatingCalipers.cpp  SeqAreaDecompose.cpp
TaskPlanner/CLI/: CMakeLists.txt  main.cpp
TaskPlanner/CLI/src/: MinTurnDecomposition.cpp  TriangularDecomposition.cpp  option_parser.cpp
TaskPlanner/Qt-GUI/: background.cpp
TaskPlanner/Qt-GUI-paper/: CMakeLists.txt  main.cpp
TaskPlanner/Qt-GUI-paper/UnitTest/: test_planning_modules.cpp
TaskPlanner/Qt-GUI-paper/UnitTest/tests/: decomposition_porblem.json  result_20200731-132747924.json  result_20200731-132834247.json  result_20200731-132848539.json  result_20200731-132930131.json  result_20200731-132943615.json  result_20200731-132957939.json  result_20200731-201231245.json  result_20200731-201532553.json  view.py
TaskPlanner/Qt-GUI-paper/gui/: CMakeLists.txt  mainwindow.cpp  mainwindow.ui
TaskPlanner/Qt-GUI-paper/gui/include/: drawingboard.h  mainwindow.h
TaskPlanner/Qt-GUI-paper/gui/src/: drawingboard.cpp
TaskPlanner/Qt-GUI-paper/include/: logger.h  pch.h  problem.h  solver.h
TaskPlanner/Qt-GUI-paper/include/Algorithm/: HorizontalAreaDecomposition.h  MinTurnDecomposition.h  MinimumTime.h  RotatingCalipers.h  SeqAreaDecompose.h  SweepPath.h  SweepPathCalipers.h
TaskPlanner/Qt-GUI-paper/src/: solver.cpp
TaskPlanner/Qt-GUI-paper/src/Alorithm/: HorizontalAreaDecomposition.cpp  MinTurnDecomposition.cpp  MinimumTime.cpp  RotatingCalipers.cpp  SeqAreaDecompose.cpp  SweepPath.cpp  SweepPathCalipers.cpp
TaskPlanner/Qt-GUI/include/: solver_interface.h
TaskPlanner/Qt-GUI/include/algo/: taskallocation.h
TaskPlanner/Qt-GUI/src/: MinTurnDecomposition.cpp  RotatingCalipers.cpp  TriangularDecomposition.cpp  solver_interface.cpp  taskallocation.cpp
